fix add image not overflow

--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -155,6 +155,7 @@ quill-editor {
 }
 
 #upload_img_block {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -162,7 +163,7 @@ quill-editor {
 }
 
 #img_uploaded_result {
-    width: auto;
+    // width: 100%;
     white-space: nowrap;
     overflow-x: auto;
 }
@@ -192,6 +193,7 @@ quill-editor {
     justify-content: space-between;
     align-items: center;
     margin: 10px 0;
+    display: none;
 }
 
 #img_view {
